=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.99

   beta03

   * addressed single-click atom picking and popup menu bug

   * fixed serious race condition / threading bug in popup menus -- this
   explains & eliminate the sporadic crashes observed on smp machines

   beta02

   * fixed broken reading of multistate objects from strings
   
   beta01

   * identified cause and temporary workaround for bad nVidia drivers on linux

   * fixed performace issue with torsion update mechanism when rotating torsions

Changes up to 0.98

   beta35

   * isosurface and isomesh now use the same ranging criteria

   * matrix_transfer, matrix_reset commands (WHAT A PAIN)

   * added support for row-major 4x4 homogenous transformation
     matrices, and in resolving internal conflicts with TTT matrices,
     made them more compatible with homogenous matrices

   * internal matrix code cleaned up somewhat -- conventions used
     are now explicit in most cases.

   * distance wizard becomes measurement wizard

   beta34

   * fixed glitch in handling bogus CRYST records

   * patched up some memory leaks

   beta33

   * wildcards for model and selection names

   * auto disable atom name wildcard for files with asterisks in 
     the atom name field

   beta32

   * psw files now start from first scene by default

   * scene animation duration default = 2.25

   * async option to ray, now default for gui "ray" button

   * increased output buffering for script output

   * fixed sdf url support

   beta31

   * scene renaming

   * dihedral display during dihedral bond torsion editing

   beta30

   * presentation mode now auto-quits after blank screen on either end.

   * fixed (or rather worked around) two bugs with nVidia on Mac

   * wildcards for the main selection operations (alt, name, resi, resn,
     chain, segi, text_type) 
